# ANTP

./: .gitignore  ANTP_Improved_PRD.docx  ARCHITECTURE_AND_DEPLOYMENT.md  Lec_3.ipynb  PAYLOAD_SPEC.md  README.md  bash.txt  implementation.txt  package-lock.json  package.json
.github/workflows/: tauri-build.yml
dashboard/: app.js  index.html  styles.css
database/: db.ts  drizzle.config.ts  migrate.ts  package-lock.json  package.json  queries.ts  schema.ts  seed.ts  tsconfig.json
edge-daemon/: package-lock.json  package.json
edge-daemon/src/: index.html  main.js  styles.css
edge-daemon/src-tauri/: Cargo.toml  tauri.conf.json
edge-daemon/src-tauri/icons/: icon.icns
edge-daemon/src-tauri/src/: lib.rs  main.rs
edge-daemon/src-tauri/src/crypto/: node_id.rs
edge-daemon/src-tauri/src/executor/: runtime.rs
edge-daemon/src-tauri/src/monitor/: mod.rs  ram.rs
edge-daemon/src-tauri/src/profiler/: cpu.rs  gpu.rs  memory.rs  mod.rs
edge-daemon/src-tauri/src/ws/: client.rs
ml-brain/: cron.py  database.py  models_core.py  requirements.txt  seed.py  server.py  train.py
mock-cloud/: package-lock.json  package.json  server.ts  tsconfig.json
orchestrator/: package-lock.json  package.json  tsconfig.json
orchestrator/src/: config.ts  index.ts
orchestrator/src/api/: auth.ts  middleware.ts  rest.ts
orchestrator/src/consensus/: clone.ts  engine.ts
orchestrator/src/economics/: payout.ts
orchestrator/src/ml/: brain-client.ts
orchestrator/src/queue/: manager.ts  tier-queue.ts
orchestrator/src/rag/: pipeline.ts
orchestrator/src/sla/: fallback.ts  (+1 more)
(+6 files in other folders)
